--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue 3 With TypeScript</title>
+    <title>IMÓVEIS FRONT</title>
     <link rel="stylesheet" type="text/css" href="/loader.css" />
 </head>
 
